<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/smalt" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/settingsProfileImage"
        android:layout_width="@dimen/settings_profile_imageview_size"
        android:layout_height="@dimen/settings_profile_imageview_size"
        android:layout_below="@id/settingsToolbar"
        android:src="@drawable/star_image"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        app:shapeAppearanceOverlay="@style/Theme.HnhApp.Settings.Image.CircularShape" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settingsNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsProfileImage"
        android:layout_marginHorizontal="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_200"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settingsNameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settingsSurnameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsNameTextInputLayout"
        android:layout_marginHorizontal="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_200"
        android:hint="@string/surname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settingsSurnameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settingsOccupationInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsSurnameTextInputLayout"
        android:layout_marginHorizontal="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_200"
        android:hint="@string/occupation"
        app:endIconDrawable="@drawable/ic_arrow_forward"
        app:endIconMode="custom"
        app:endIconTint="@color/smalt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settingsOccupationInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settingsOtherOccupationTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsOccupationInputLayout"
        android:layout_marginHorizontal="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_200"
        android:hint="@string/other_occupation"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settingsOtherOccupationTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.myapplication.presentation.custom_views.LoadableButton
        android:id="@+id/settingsChangeLoadableButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/normal_100"
        android:gravity="center" />


</RelativeLayout>